docs: update OpenAPI documentation
