# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/api/progress": {
             "get": {
-                "description": "Returns all progress records",
+                "description": "Returns all progress records filtered by username",
                 "produces": [
                     "application/json"
                 ],
@@ -14,6 +14,14 @@
                     "progress"
                 ],
                 "summary": "Get all progress",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter by username",
+                        "name": "username",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -126,6 +134,12 @@
         "handlers.bulkUpsertRequest": {
             "type": "object",
             "properties": {
+                "events": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handlers.bulkUpsertRequestEvent"
+                    }
+                },
                 "lastSolvedAtUtc": {
                     "type": "string",
                     "example": "2025-01-01T10:00:00Z"
@@ -161,6 +175,19 @@
                 "username": {
                     "type": "string",
                     "example": "john_doe"
+                }
+            }
+        },
+        "handlers.bulkUpsertRequestEvent": {
+            "type": "object",
+            "properties": {
+                "perceivedDifficulty": {
+                    "type": "integer",
+                    "example": 0
+                },
+                "solvedAtUtc": {
+                    "type": "string",
+                    "example": "2025-01-01T10:00:00Z"
                 }
             }
         },
@@ -202,6 +229,12 @@
         "models.Progress": {
             "type": "object",
             "properties": {
+                "events": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.ProgressEvent"
+                    }
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -230,6 +263,20 @@
                     "$ref": "#/definitions/status.Status"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ProgressEvent": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "perceived_difficulty": {
+                    "type": "integer"
+                },
+                "solved_at_utc": {
                     "type": "string"
                 }
             }
